<resources>
    <string name="streaming_app_name">牛直播</string>
    <string name="streaming_setting_title">直播高级设置</string>
    <string name="streaming_protocol_tips">传输协议：</string>
    <string name="streaming_QUIC_protocol">QUIC/RTMP</string>
    <string name="streaming_TCP_protocol">TCP/RTMP</string>
    <string name="streaming_codec_mode_tips">编(解)码方式：</string>
    <string name="streaming_codec_sw">软编(解)</string>
    <string name="streaming_codec_hw">硬编(解)</string>
    <string name="streaming_video_quality_tips">视频质量：</string>
    <string name="streaming_codec_size_tips">编码尺寸：</string>
    <string name="streaming_prebuilt">预设</string>
    <string name="streaming_custom">自定义</string>
    <string name="streaming_codec_control_tips">编码控制：</string>
    <string name="streaming_quality_priority">质量优先</string>
    <string name="streaming_bitrate_priority">码率优先</string>
    <string name="streaming_auto_bitrate_tips">自适应码率：</string>
    <string name="streaming_debug_mode_tips">Debug 模式：</string>
    <string name="streaming_enable_text">开启</string>
    <string name="streaming_disable_text">关闭</string>
    <string name="streaming_fps">FPS：</string>
    <string name="streaming_bitrate">码率：</string>
    <string name="streaming_gop">最大关键帧率：</string>
    <string name="streaming_width">Width: </string>
    <string name="streaming_height">Height: </string>
    <string name="streaming_cache_tips">播放器缓存大小(ms)：</string>
    <string name="streaming_default_cache">默认缓存：</string>
    <string name="streaming_max_cache">最大缓存：</string>
    <string name="streaming_streaming_mode_hint">房间名(不支持特殊字符)或推流地址</string>
    <string name="streaming_streaming_mode_button_text">创建直播</string>
    <string name="streaming_playing_mode_hint">房间名(不支持特殊字符)或播放地址</string>
    <string name="streaming_playing_mode_button_text">观看直播</string>
    <string name="streaming_cannot_toggle_light_in_front">前置下无法打开闪光灯！！！</string>
    <string name="streaming_null_room_name_toast">房间名不能为空！！！</string>
    <string name="streaming_failed_open_camera">无法打开摄像头！！!</string>
    <string name="streaming_failed_open_microphone">无法打开麦克风！！!</string><![CDATA[
    >
    ]]>
    <string name="streaming_streaming_io_error">网络连接错误！！!</string>
    <string name="streaming_playing_io_error">播放出错：请确认是否还在推流中！！！</string>
    <string name="streaming_network_disconnected">网络连接断开！！!</string>
    <string name="streaming_open_failed">播放地址打开失败！！！</string>
    <string name="streaming_get_url_failed">地址获取失败，请检查网络！！！</string>
    <string name="streaming_illegal_publish_url">非法房间名或推流地址！！！</string>
    <string name="streaming_illegal_play_url">非法播放地址！！！</string>
    <string name="streaming_reconnecting">正在重连...</string>
    <string name="streaming_disconnected">连接断开</string>
    <string name="streaming_streaming_log_text">推流协议：%1$s\n推流分辨率：%2$d x %3$d\n视频码率：%4$d kbps\n音频码率：%5$d kbps\n视频帧率：%6$d fps\n音频帧率：%7$d fps</string>
    <string name="streaming_playing_log_text">卡顿次数：%1$d\n分辨率：%2$d x %3$d\n视频码率：%4$d kbps\n视频帧率：%5$d fps</string>
    <string name="streaming_buffering">Buffering</string>
    <string name="streaming_copy_to_clipboard">房间名：%1$s 复制到剪贴板</string>
    <string name="streaming_android_auto_update_download_progress">正在下载:%1$d%%</string>
    <string name="streaming_agree">同意</string>
    <string name="streaming_niuliving_protocol">牛直播用户协议</string>
    <string name="streaming_niuliving_protocol_tips">需同意 NiuLiving 用户协议</string>
</resources>
