<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/streaming_white"
            android:onClick="onClickBack"
            android:src="@mipmap/streaming_setting_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/streaming_setting_title"
            android:textColor="@color/streaming_black"
            android:textSize="20sp" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingTop="4dp"
                android:paddingEnd="15dp"
                android:paddingBottom="4dp"
                android:text="@string/streaming_protocol_tips"
                android:textColor="@color/streaming_black" />

            <RadioGroup
                android:id="@+id/transport_protocol_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingTop="4dp"
                android:paddingEnd="15dp"
                android:paddingBottom="4dp">

                <RadioButton
                    android:id="@+id/QUIC_protocol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/streaming_QUIC_protocol" />

                <RadioButton
                    android:id="@+id/TCP_protocol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/streaming_TCP_protocol" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingTop="4dp"
                android:paddingEnd="15dp"
                android:paddingBottom="4dp"
                android:text="@string/streaming_codec_mode_tips"
                android:textColor="@color/streaming_black" />

            <RadioGroup
                android:id="@+id/codec_mode_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingTop="4dp"
                android:paddingEnd="15dp"
                android:paddingBottom="4dp">

                <RadioButton
                    android:id="@+id/codec_sw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/streaming_codec_sw" />

                <RadioButton
                    android:id="@+id/codec_hw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/streaming_codec_hw" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingTop="4dp"
                android:paddingEnd="15dp"
                android:paddingBottom="4dp"
                android:text="@string/streaming_video_quality_tips"
                android:textColor="@color/streaming_black" />

            <RadioGroup
                android:id="@+id/video_quality_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingTop="4dp"
                android:paddingEnd="15dp"
                android:paddingBottom="4dp">

                <RadioButton
                    android:id="@+id/video_quality_prebuilt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/streaming_prebuilt" />

                <RadioButton
                    android:id="@+id/video_quality_custom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/streaming_custom" />
            </RadioGroup>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@color/streaming_popWindowBackgroundColor">

                <Spinner
                    android:id="@+id/video_quality_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown" />

                <LinearLayout
                    android:id="@+id/custom_video_quality_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/streaming_fps"
                        android:textColor="@color/streaming_black" />

                    <EditText
                        android:id="@+id/custom_fps_edit_text"
                        android:layout_width="48dp"
                        android:layout_height="wrap_content"
                        android:inputType="number" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/streaming_bitrate"
                        android:textColor="@color/streaming_black" />

                    <EditText
                        android:id="@+id/custom_bitrate_edit_text"
                        android:layout_width="48dp"
                        android:layout_height="wrap_content"
                        android:inputType="number" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/streaming_gop"
                        android:textColor="@color/streaming_black" />

                    <EditText
                        android:id="@+id/custom_gop_edit_text"
                        android:layout_width="48dp"
                        android:layout_height="wrap_content"
                        android:inputType="number" />
                </LinearLayout>
            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingTop="4dp"
                android:paddingEnd="15dp"
                android:paddingBottom="4dp"
                android:text="@string/streaming_codec_size_tips"
                android:textColor="@color/streaming_black" />

            <RadioGroup
                android:id="@+id/codec_size_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingTop="4dp"
                android:paddingEnd="15dp"
                android:paddingBottom="4dp">

                <RadioButton
                    android:id="@+id/codec_size_prebuilt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/streaming_prebuilt" />

                <RadioButton
                    android:id="@+id/codec_size_custom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/streaming_custom" />
            </RadioGroup>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@color/streaming_popWindowBackgroundColor"
                android:paddingStart="4dp"
                android:paddingTop="1dp"
                android:paddingEnd="4dp"
                android:paddingBottom="1dp">

                <Spinner
                    android:id="@+id/codec_size_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:id="@+id/custom_codec_size_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/streaming_width"
                        android:textColor="@color/streaming_black" />

                    <EditText
                        android:id="@+id/custom_width_edit_text"
                        android:layout_width="48dp"
                        android:layout_height="wrap_content"
                        android:inputType="number" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/streaming_height"
                        android:textColor="@color/streaming_black" />

                    <EditText
                        android:id="@+id/custom_height_edit_text"
                        android:layout_width="48dp"
                        android:layout_height="wrap_content"
                        android:inputType="number" />
                </LinearLayout>
            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingTop="4dp"
                android:paddingEnd="15dp"
                android:paddingBottom="4dp"
                android:text="@string/streaming_codec_control_tips"
                android:textColor="@color/streaming_black" />

            <RadioGroup
                android:id="@+id/codec_control_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingTop="4dp"
                android:paddingEnd="15dp"
                android:paddingBottom="4dp">

                <RadioButton
                    android:id="@+id/quality_priority"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/streaming_quality_priority" />

                <RadioButton
                    android:id="@+id/bitrate_priority"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/streaming_bitrate_priority" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingTop="4dp"
                android:paddingEnd="15dp"
                android:paddingBottom="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/streaming_auto_bitrate_tips"
                    android:textColor="@color/streaming_black" />

                <RadioGroup
                    android:id="@+id/auto_bitrate_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/enable_auto_bitrate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/streaming_enable_text" />

                    <RadioButton
                        android:id="@+id/disable_auto_bitrate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/streaming_disable_text" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingTop="4dp"
                android:paddingEnd="15dp"
                android:paddingBottom="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/streaming_debug_mode_tips"
                    android:textColor="@color/streaming_black" />

                <RadioGroup
                    android:id="@+id/debug_mode_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/enable_debug_mode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/streaming_enable_text" />

                    <RadioButton
                        android:id="@+id/disable_debug_mode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/streaming_disable_text" />
                </RadioGroup>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingTop="4dp"
                android:paddingEnd="15dp"
                android:paddingBottom="4dp"
                android:text="@string/streaming_cache_tips"
                android:textColor="@color/streaming_black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingEnd="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/streaming_default_cache"
                    android:textColor="@color/streaming_black" />

                <EditText
                    android:id="@+id/default_cache_edit_text"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/streaming_max_cache"
                    android:textColor="@color/streaming_black" />

                <EditText
                    android:id="@+id/max_cache_edit_text"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
